// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseElement operator changes should handle updates 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_phone"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice select-medium"
        >
          <select
            data-testid="select"
          >
            <option
              value="has_any_word"
            >
              has any of the words
            </option>
            <option
              value="has_all_words"
            >
              has all of the words
            </option>
            <option
              value="has_phrase"
            >
              has the phrase
            </option>
            <option
              value="has_only_phrase"
            >
              has only the phrase
            </option>
            <option
              value="has_beginning"
            >
              starts with
            </option>
            <option
              value="has_text"
            >
              has some text
            </option>
            <option
              value="has_number"
            >
              has a number
            </option>
            <option
              value="has_number_between"
            >
              has a number between
            </option>
            <option
              value="has_number_lt"
            >
              has a number below
            </option>
            <option
              value="has_number_lte"
            >
              has a number at or below
            </option>
            <option
              value="has_number_eq"
            >
              has a number equal to
            </option>
            <option
              value="has_number_gte"
            >
              has a number at or above
            </option>
            <option
              value="has_number_gt"
            >
              has a number above
            </option>
            <option
              value="has_date"
            >
              has a date
            </option>
            <option
              value="has_date_lt"
            >
              has a date before
            </option>
            <option
              value="has_date_eq"
            >
              has a date equal to
            </option>
            <option
              value="has_date_gt"
            >
              has a date after
            </option>
            <option
              value="has_time"
            >
              has a time
            </option>
            <option
              value="has_phone"
            >
              has a phone number
            </option>
            <option
              value="has_email"
            >
              has an email
            </option>
            <option
              value="has_state"
            >
              has state
            </option>
            <option
              value="has_district"
            >
              has district
            </option>
            <option
              value="has_ward"
            >
              has ward
            </option>
            <option
              value="has_value"
            >
              is not empty
            </option>
            <option
              value="has_pattern"
            >
              matches regex
            </option>
          </select>
        </div>
        <div
          class="single_operand"
        />
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="36"
                name="exitName"
                type="text"
                value="Has Phone"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement operator changes should should set arguments for numeric range 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number_between"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice select-medium"
        >
          <select
            data-testid="select"
          >
            <option
              value="has_any_word"
            >
              has any of the words
            </option>
            <option
              value="has_all_words"
            >
              has all of the words
            </option>
            <option
              value="has_phrase"
            >
              has the phrase
            </option>
            <option
              value="has_only_phrase"
            >
              has only the phrase
            </option>
            <option
              value="has_beginning"
            >
              starts with
            </option>
            <option
              value="has_text"
            >
              has some text
            </option>
            <option
              value="has_number"
            >
              has a number
            </option>
            <option
              value="has_number_between"
            >
              has a number between
            </option>
            <option
              value="has_number_lt"
            >
              has a number below
            </option>
            <option
              value="has_number_lte"
            >
              has a number at or below
            </option>
            <option
              value="has_number_eq"
            >
              has a number equal to
            </option>
            <option
              value="has_number_gte"
            >
              has a number at or above
            </option>
            <option
              value="has_number_gt"
            >
              has a number above
            </option>
            <option
              value="has_date"
            >
              has a date
            </option>
            <option
              value="has_date_lt"
            >
              has a date before
            </option>
            <option
              value="has_date_eq"
            >
              has a date equal to
            </option>
            <option
              value="has_date_gt"
            >
              has a date after
            </option>
            <option
              value="has_time"
            >
              has a time
            </option>
            <option
              value="has_phone"
            >
              has a phone number
            </option>
            <option
              value="has_email"
            >
              has an email
            </option>
            <option
              value="has_state"
            >
              has state
            </option>
            <option
              value="has_district"
            >
              has district
            </option>
            <option
              value="has_ward"
            >
              has ward
            </option>
            <option
              value="has_value"
            >
              is not empty
            </option>
            <option
              value="has_pattern"
            >
              matches regex
            </option>
          </select>
        </div>
        <div
          class="multi_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="arguments"
                type="text"
                value=""
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
          <span
            class="divider"
            data-draggable="true"
          >
            and
          </span>
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="arguments"
                type="text"
                value=""
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="36"
                name="exitName"
                type="text"
                value=""
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement operator changes shouldnt update exit if it has been edited 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice select-medium"
        >
          <select
            data-testid="select"
          >
            <option
              value="has_any_word"
            >
              has any of the words
            </option>
            <option
              value="has_all_words"
            >
              has all of the words
            </option>
            <option
              value="has_phrase"
            >
              has the phrase
            </option>
            <option
              value="has_only_phrase"
            >
              has only the phrase
            </option>
            <option
              value="has_beginning"
            >
              starts with
            </option>
            <option
              value="has_text"
            >
              has some text
            </option>
            <option
              value="has_number"
            >
              has a number
            </option>
            <option
              value="has_number_between"
            >
              has a number between
            </option>
            <option
              value="has_number_lt"
            >
              has a number below
            </option>
            <option
              value="has_number_lte"
            >
              has a number at or below
            </option>
            <option
              value="has_number_eq"
            >
              has a number equal to
            </option>
            <option
              value="has_number_gte"
            >
              has a number at or above
            </option>
            <option
              value="has_number_gt"
            >
              has a number above
            </option>
            <option
              value="has_date"
            >
              has a date
            </option>
            <option
              value="has_date_lt"
            >
              has a date before
            </option>
            <option
              value="has_date_eq"
            >
              has a date equal to
            </option>
            <option
              value="has_date_gt"
            >
              has a date after
            </option>
            <option
              value="has_time"
            >
              has a time
            </option>
            <option
              value="has_phone"
            >
              has a phone number
            </option>
            <option
              value="has_email"
            >
              has an email
            </option>
            <option
              value="has_state"
            >
              has state
            </option>
            <option
              value="has_district"
            >
              has district
            </option>
            <option
              value="has_ward"
            >
              has ward
            </option>
            <option
              value="has_value"
            >
              is not empty
            </option>
            <option
              value="has_pattern"
            >
              matches regex
            </option>
          </select>
        </div>
        <div
          class="single_operand"
        />
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="36"
                name="exitName"
                type="text"
                value="My Exit Name"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement render renders no argument rules 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice select-medium"
        >
          <select
            data-testid="select"
          >
            <option
              value="has_any_word"
            >
              has any of the words
            </option>
            <option
              value="has_all_words"
            >
              has all of the words
            </option>
            <option
              value="has_phrase"
            >
              has the phrase
            </option>
            <option
              value="has_only_phrase"
            >
              has only the phrase
            </option>
            <option
              value="has_beginning"
            >
              starts with
            </option>
            <option
              value="has_text"
            >
              has some text
            </option>
            <option
              value="has_number"
            >
              has a number
            </option>
            <option
              value="has_number_between"
            >
              has a number between
            </option>
            <option
              value="has_number_lt"
            >
              has a number below
            </option>
            <option
              value="has_number_lte"
            >
              has a number at or below
            </option>
            <option
              value="has_number_eq"
            >
              has a number equal to
            </option>
            <option
              value="has_number_gte"
            >
              has a number at or above
            </option>
            <option
              value="has_number_gt"
            >
              has a number above
            </option>
            <option
              value="has_date"
            >
              has a date
            </option>
            <option
              value="has_date_lt"
            >
              has a date before
            </option>
            <option
              value="has_date_eq"
            >
              has a date equal to
            </option>
            <option
              value="has_date_gt"
            >
              has a date after
            </option>
            <option
              value="has_time"
            >
              has a time
            </option>
            <option
              value="has_phone"
            >
              has a phone number
            </option>
            <option
              value="has_email"
            >
              has an email
            </option>
            <option
              value="has_state"
            >
              has state
            </option>
            <option
              value="has_district"
            >
              has district
            </option>
            <option
              value="has_ward"
            >
              has ward
            </option>
            <option
              value="has_value"
            >
              is not empty
            </option>
            <option
              value="has_pattern"
            >
              matches regex
            </option>
          </select>
        </div>
        <div
          class="single_operand"
        />
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="36"
                name="exitName"
                type="text"
                value="Has Number"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement render should render empty case 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_any_word"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice select-medium"
        >
          <select
            data-testid="select"
          >
            <option
              value="has_any_word"
            >
              has any of the words
            </option>
            <option
              value="has_all_words"
            >
              has all of the words
            </option>
            <option
              value="has_phrase"
            >
              has the phrase
            </option>
            <option
              value="has_only_phrase"
            >
              has only the phrase
            </option>
            <option
              value="has_beginning"
            >
              starts with
            </option>
            <option
              value="has_text"
            >
              has some text
            </option>
            <option
              value="has_number"
            >
              has a number
            </option>
            <option
              value="has_number_between"
            >
              has a number between
            </option>
            <option
              value="has_number_lt"
            >
              has a number below
            </option>
            <option
              value="has_number_lte"
            >
              has a number at or below
            </option>
            <option
              value="has_number_eq"
            >
              has a number equal to
            </option>
            <option
              value="has_number_gte"
            >
              has a number at or above
            </option>
            <option
              value="has_number_gt"
            >
              has a number above
            </option>
            <option
              value="has_date"
            >
              has a date
            </option>
            <option
              value="has_date_lt"
            >
              has a date before
            </option>
            <option
              value="has_date_eq"
            >
              has a date equal to
            </option>
            <option
              value="has_date_gt"
            >
              has a date after
            </option>
            <option
              value="has_time"
            >
              has a time
            </option>
            <option
              value="has_phone"
            >
              has a phone number
            </option>
            <option
              value="has_email"
            >
              has an email
            </option>
            <option
              value="has_state"
            >
              has state
            </option>
            <option
              value="has_district"
            >
              has district
            </option>
            <option
              value="has_ward"
            >
              has ward
            </option>
            <option
              value="has_value"
            >
              is not empty
            </option>
            <option
              value="has_pattern"
            >
              matches regex
            </option>
          </select>
        </div>
        <div
          class="single_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="arguments"
                placeholder=""
                type="text"
                value=""
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="36"
                name="exitName"
                type="text"
                value=""
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement update handles argument change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_any_word"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice select-medium"
        >
          <select
            data-testid="select"
          >
            <option
              value="has_any_word"
            >
              has any of the words
            </option>
            <option
              value="has_all_words"
            >
              has all of the words
            </option>
            <option
              value="has_phrase"
            >
              has the phrase
            </option>
            <option
              value="has_only_phrase"
            >
              has only the phrase
            </option>
            <option
              value="has_beginning"
            >
              starts with
            </option>
            <option
              value="has_text"
            >
              has some text
            </option>
            <option
              value="has_number"
            >
              has a number
            </option>
            <option
              value="has_number_between"
            >
              has a number between
            </option>
            <option
              value="has_number_lt"
            >
              has a number below
            </option>
            <option
              value="has_number_lte"
            >
              has a number at or below
            </option>
            <option
              value="has_number_eq"
            >
              has a number equal to
            </option>
            <option
              value="has_number_gte"
            >
              has a number at or above
            </option>
            <option
              value="has_number_gt"
            >
              has a number above
            </option>
            <option
              value="has_date"
            >
              has a date
            </option>
            <option
              value="has_date_lt"
            >
              has a date before
            </option>
            <option
              value="has_date_eq"
            >
              has a date equal to
            </option>
            <option
              value="has_date_gt"
            >
              has a date after
            </option>
            <option
              value="has_time"
            >
              has a time
            </option>
            <option
              value="has_phone"
            >
              has a phone number
            </option>
            <option
              value="has_email"
            >
              has an email
            </option>
            <option
              value="has_state"
            >
              has state
            </option>
            <option
              value="has_district"
            >
              has district
            </option>
            <option
              value="has_ward"
            >
              has ward
            </option>
            <option
              value="has_value"
            >
              is not empty
            </option>
            <option
              value="has_pattern"
            >
              matches regex
            </option>
          </select>
        </div>
        <div
          class="single_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="arguments"
                placeholder=""
                type="text"
                value="Purple, p"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="36"
                name="exitName"
                type="text"
                value="Purple"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`CaseElement update handles multiple argument change 1`] = `
<body>
  <div>
    <div
      class="ele group"
    >
      <div
        class="kase has_number_between"
        data-draggable="true"
      >
        <span
          class="fe-chevrons-expand dnd_icon"
          data-draggable="true"
        />
        <div
          class="choice select-medium"
        >
          <select
            data-testid="select"
          >
            <option
              value="has_any_word"
            >
              has any of the words
            </option>
            <option
              value="has_all_words"
            >
              has all of the words
            </option>
            <option
              value="has_phrase"
            >
              has the phrase
            </option>
            <option
              value="has_only_phrase"
            >
              has only the phrase
            </option>
            <option
              value="has_beginning"
            >
              starts with
            </option>
            <option
              value="has_text"
            >
              has some text
            </option>
            <option
              value="has_number"
            >
              has a number
            </option>
            <option
              value="has_number_between"
            >
              has a number between
            </option>
            <option
              value="has_number_lt"
            >
              has a number below
            </option>
            <option
              value="has_number_lte"
            >
              has a number at or below
            </option>
            <option
              value="has_number_eq"
            >
              has a number equal to
            </option>
            <option
              value="has_number_gte"
            >
              has a number at or above
            </option>
            <option
              value="has_number_gt"
            >
              has a number above
            </option>
            <option
              value="has_date"
            >
              has a date
            </option>
            <option
              value="has_date_lt"
            >
              has a date before
            </option>
            <option
              value="has_date_eq"
            >
              has a date equal to
            </option>
            <option
              value="has_date_gt"
            >
              has a date after
            </option>
            <option
              value="has_time"
            >
              has a time
            </option>
            <option
              value="has_phone"
            >
              has a phone number
            </option>
            <option
              value="has_email"
            >
              has an email
            </option>
            <option
              value="has_state"
            >
              has state
            </option>
            <option
              value="has_district"
            >
              has district
            </option>
            <option
              value="has_ward"
            >
              has ward
            </option>
            <option
              value="has_value"
            >
              is not empty
            </option>
            <option
              value="has_pattern"
            >
              matches regex
            </option>
          </select>
        </div>
        <div
          class="multi_operand"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="arguments"
                type="text"
                value="1"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
          <span
            class="divider"
            data-draggable="true"
          >
            and
          </span>
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="-1"
                name="arguments"
                type="text"
                value="100"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="categorize_as"
          data-draggable="true"
        >
          categorize as
        </div>
        <div
          class="category"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper"
            >
              <input
                class="textinput"
                data-spec="input"
                data-testid="input"
                maxlength="36"
                name="exitName"
                type="text"
                value="1 - 100"
              />
              <div
                class="completion_container hidden"
                data-spec="completion-options"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="options_wrapper"
                >
                  <ul
                    class="option_list"
                    data-spec="completion-list"
                  />
                  <div
                    class="help"
                    data-spec="completion-help"
                  >
                    Tab to complete, enter to select
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="fe-x remove_icon"
          data-testid="remove-case-763e4844-3e1b-407a-a1b5-5fdfcd308b41"
        />
      </div>
    </div>
  </div>
</body>
`;
